--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,27 @@
-body {
-    margin: 0;
-    padding: 0;
-    background-color: black;
-    color: white;
-}
-
-.container {
-    height: 100vh;
+.filters {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 10px;
     justify-content: center;
-    align-items: center;
+    margin-bottom: 10px;
 }
 
-button {
-    margin: 5px;
-    padding: 10px 20px;
-    font-size: 16px;
+.filters button {
+    border: none;
+    border-radius: 8px;
+    background-color: #007bff;
+    color: white;
     cursor: pointer;
+    transition: background-color 0.3s;
 }
 
-button:disabled {
-    opacity: 0.5;
-    cursor: not-allowed;
+.filters button:hover {
+    background-color: #0056b3;
+}
+.pokemon-list {
+    max-height: 80vh;
+    overflow-y: auto;
+    padding: 10px;
+    background: aqua;
+    border-radius: 8px;
 }
